BJS2-85708 Регистрация пользователя fixed