@@ -1,14 +1,13 @@
-package school.faang.BJS2_85708;
+package school.faang.bjs2_85708;
 
 import lombok.Data;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Data
 public class User {
-    public static final List<String> VALID_JOBS = Arrays.asList("Google", "Uber", "Amazon");
-    public static final List<String> VALID_ADDRESSES = Arrays.asList("London", "New York", "Amsterdam");
+    public static final List<String> VALID_JOBS = List.of("Google", "Uber", "Amazon");
+    public static final List<String> VALID_ADDRESSES = List.of("London", "New York", "Amsterdam");
 
     private String name;
     private int age;
@@ -16,12 +15,13 @@ public class User {
     private String address;
 
     public User(String name, int age, String job, String address) {
-        if (name.isBlank()) {
+        final int ageForCondition = 18;
+        if (name == null || name.isBlank()) {
             throw new IllegalArgumentException("Имя не может быть пустым.");
         }
 
-        if (age < 18) {
-            throw new IllegalArgumentException("Возраст не может быть меньше 18.");
+        if (age < ageForCondition) {
+            throw new IllegalArgumentException("Возраст не может быть меньше %d.".formatted(ageForCondition));
         }
 
         if (!VALID_JOBS.contains(job)) {
